# ai-sdk-cpp

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  SECURITY.md  cmake_install.cmake  compile_commands.json  test_deepseek.cpp  vcpkg.json
.github/workflows/: ci.yml
bindings/c/: CMakeLists.txt  CTestTestfile.cmake  Makefile  ai_sdk.cpp  ai_sdk.h  cmake_install.cmake
bindings/go/aisdk/: aisdk.go  go.mod
bindings/node/: async-smoke.cjs  async-tool-smoke.cjs  binding.gyp  index.ts  memory-session-smoke.cjs  package-lock.json  package.json  reasoning.cjs  smoke.cjs  tsconfig.json
bindings/node/src/: addon.cpp
bindings/python/: CMakeLists.txt  setup.py
bindings/python/ai_sdk/: __init__.py  _native.pyi
bindings/python/src/: module.cpp
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs
cli/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
cmake/: CompilerFlags.cmake  ai-sdk-cppConfig.cmake.in
docs/: README.md  native-agents.md  providers.md
docs/guides/: building-a-coding-agent-cpp.md  building-a-coding-agent-go.md  building-a-coding-agent-python.md  building-a-coding-agent-rust.md  building-a-coding-agent-typescript.md
docs/superpowers/specs/: 2026-06-19-native-agent-capabilities-design.md
examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/basic_generate/: main.cpp
examples/claude_code_clone/: main.cpp
examples/streaming_chat/: main.cpp
examples/tool_agent/: main.cpp
include/ai/: ai.hpp  coding_agent.hpp
include/ai/agent/: agent.hpp  tool_loop_agent.hpp
include/ai/core/: batch.hpp  embed.hpp  generate_image.hpp  generate_object.hpp  generate_speech.hpp  generate_text.hpp  generate_video.hpp  rerank.hpp  stream_object.hpp  stream_text.hpp  transcribe.hpp
include/ai/error/: ai_error.hpp  api_call_error.hpp
include/ai/gateway/: gateway.hpp
include/ai/http/: client.hpp  connection_pool.hpp  multipart.hpp  response.hpp  websocket.hpp
include/ai/mcp/: mcp_client.hpp  transport.hpp
include/ai/memory/: memory.hpp
include/ai/model/: caching_middleware.hpp  call_options.hpp  embedding_model.hpp  file_storage.hpp  generate_result.hpp  image_model.hpp  language_model.hpp  middleware.hpp  (+9 more)
providers/anthropic/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/anthropic/include/ai/providers/anthropic/: anthropic.hpp  anthropic_batch.hpp  anthropic_file_storage.hpp  anthropic_model.hpp
providers/anthropic/src/: anthropic_batch.cpp  anthropic_file_storage.cpp  anthropic_model.cpp  anthropic_provider.cpp  convert_prompt.cpp  parse_response.cpp
providers/bedrock/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/bedrock/include/ai/providers/bedrock/: bedrock.hpp  sigv4.hpp
providers/bedrock/src/: bedrock_model.cpp  bedrock_provider.cpp  sigv4.cpp
providers/cohere/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/deepseek/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/fireworks/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/google/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/groq/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/mistral/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/moonshotai/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/openai/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/openai-compatible/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/openai-compatible/include/ai/providers/openai_compatible/: openai_compatible.hpp
providers/openai-compatible/src/: openai_compatible_provider.cpp
providers/openai/include/ai/providers/openai/: openai.hpp  openai_batch.hpp  openai_embedding.hpp  openai_model.hpp  openai_responses_model.hpp
providers/openai/src/: convert_prompt.cpp  openai_batch.cpp  openai_embedding.cpp  openai_model.cpp  openai_realtime.cpp  openai_responses_model.cpp  parse_response.cpp
providers/perplexity/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/togetherai/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/xai/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
providers/zai/: CMakeLists.txt
scripts/: run_smoke.sh
src/: coding_agent.cpp
src/agent/: agent.cpp  tool_loop_agent.cpp
src/core/: batch.cpp  boost_json_src.cpp  embed.cpp  generate_image.cpp  generate_object.cpp  generate_speech.cpp  generate_text.cpp  rerank.cpp  stream_text.cpp  transcribe.cpp
src/error/: ai_error.cpp  api_call_error.cpp
src/http/: client.cpp  connection_pool.cpp  multipart.cpp  websocket.cpp
src/mcp/: mcp_client.cpp  mcp_sse_transport.cpp  transport.cpp
src/memory/: memory.cpp
src/model/: middleware.cpp
src/permission/: permission.cpp
src/schema/: json_schema.cpp  validator.cpp
src/session/: context_strategy.cpp  session.cpp  store.cpp
src/stream/: data_stream.cpp  sse_parser.cpp
src/telemetry/: telemetry.cpp
src/tool/: tool_set.cpp
src/util/: json.cpp  rate_limiter.cpp  token_count.cpp
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/unit/: CMakeLists.txt  CTestTestfile.cmake  Makefile  ai-sdk-tests-b12d07c_include.cmake  cmake_install.cmake  fake_http_client.hpp  test_anthropic_structured.cpp  test_batch.cpp  test_cancellation.cpp  test_coding_agent.cpp  test_embeddings.cpp  test_json_schema.cpp  test_live_smoke.cpp  test_mcp.cpp  test_memory.cpp  test_messages.cpp  test_middleware.cpp  test_openai_reasoning.cpp  test_permission.cpp  test_provider_http.cpp  test_rate_limiter.cpp  test_rerank.cpp  test_retry.cpp  test_session.cpp  test_session_store.cpp  test_sse_parser.cpp  test_standard_toolkit.cpp  test_streaming.cpp  test_validator.cpp
(+59 files in other folders)
